style.css
/* ... */
  .footer-media{
    width: 30%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .footer-media-item{
    display: flex;
    gap: 1rem;
    align-items:  center;
    justify-content: center;
    margin: 1rem auto;
    width: 2rem;


  }

  .footer-media-item .media-name{
    display: none;
  }


  .footer-texts{
    margin: 1rem auto;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .footer-texts p{
    font-size: 12px;
    width: 80%;
    margin: 1rem auto;
    color: rgb(207, 229, 229);
  }

  

.hide{
    display: none;
}









  /* ...desktop view.... */




  @media only screen and (min-width:478px){


    .navbar h1::after{
        content: "Teenergy Solar Solutions";
    }
    section{
        padding: 6rem 0;
    }

    .navright{
        display: none;
    }



    .hero-header{
        width: 50%;
        font-size: 3rem;
        color: white;
        line-height: 4rem;
        margin: 1rem 0 ;

        
    }

    .hero-stat-div{
        display: flex;
        flex-direction:row;
        min-height: 5rem;
        border-radius: 5px;
        width: 95%;
        margin-top: 8rem;
    }

    .cardrow,.cardrowb,.cardrowc,.cardrow-cta,.cardrow-parted{
        width: 20%;
        border-bottom: none;
        font-size: 14px;
        
        border-right:1px solid rgb(255, 255, 255) ;
    }
    .cardrow-cta{
        border-right: 0;
    
    }

    .side-bar{
        display: flex;
        flex-direction: row;
        width: 50%;
        border-radius: 0;
        height: 5rem;
        box-shadow: 0 0 0 0;
        position: relative;
        align-items: center;
      
    
        justify-content: flex-end;
        padding: 0;
       
        gap: 5px;
      
        top: 0; 
        right: 0;
        
    }

    .side-bar .menu{
        justify-content: flex-start;
        gap: 5px;
        width: 8.5rem;
        margin: 0;
       
        border-bottom: 2px solid transparent;
        
       
    }
    .side-bar .menu .side-text{
        border-bottom: 2px solid transparent;
        height: 1.5rem;
        transition: all 0.5s ease-in-out ;
    }
    .side-bar .menu .side-text:hover{
        border-bottom: 2px solid greenyellow;
    }
    .points-div{
        display: flex;
        align-items: center;
        justify-content:space-around;
        height: 35rem;
    }

    .subhero-divs{
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: space-around;
        height: 30rem;
        flex-direction: row-reverse;
        
    }

    .ml{
        margin-left: 5%;
    }
    .subhero-divs-text{
        max-width: 425px;
        
    }

    #about .container{
        width: 100% ;

        
    }
    
    .about-images-div{
        max-width: 400px;
        margin: 0;
    }

    .point-text{
        max-width: 478px;
        
        height: 50%;
    }













    .carousel-div{
        max-width: 400px;
        margin: 0;
    }






    .slider{
        max-width: 250px;
        margin: 3rem 1rem;
        height: 20rem;
    }






    .work-card{
        max-width: 400px;
    }











    footer{
        padding: 6rem 0;
    }
    .footer-media{
        gap: 8px;
    }

    .footer-media-item {
        width: 8rem;
        gap: 5px;
        
        justify-content: flex-start;
    }
    .footer-media-item .media-name{
        display: flex;
        opacity: 1;
        color: white;
    }






  }

